--- a/app/src/main/res/drawable/bg_ticket_qr_upper.xml
+++ b/app/src/main/res/drawable/bg_ticket_qr_upper.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/White" />
-    <stroke android:color="#F3F3F3"
-        android:width="1dp"/>
-    <corners android:radius="10dp"/>
+    <corners android:topLeftRadius="15dp"
+        android:topRightRadius="15dp"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"/>
 </shape>
