--- a/app/src/main/res/layout/dialog_ticket_detail_map.xml
+++ b/app/src/main/res/layout/dialog_ticket_detail_map.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
-    android:background="@color/transparent"
+    android:background="@android:color/transparent"
     app:umanoDragView="@id/drawer"
     app:umanoPanelHeight="98dp"
     app:umanoOverlay="true"
