PG 승인을 위해 부분 수정

--- a/app/src/main/res/layout/fragment_boarding_application_detail.xml
+++ b/app/src/main/res/layout/fragment_boarding_application_detail.xml
@@ -55,11 +55,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:background="@drawable/bg_round12_green"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="6dp"
                     android:text="운행대기"
                     android:textColor="@color/White"
                     android:textSize="11sp"
-                    android:paddingStart="6dp"
-                    android:paddingEnd="6dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_bus_id"
                     app:layout_constraintStart_toEndOf="@+id/tv_bus_id"
                     app:layout_constraintTop_toTopOf="@+id/tv_bus_id" />
@@ -137,75 +137,49 @@
 
                 </androidx.recyclerview.widget.RecyclerView>
 
-                <com.thustop.thestop.widgets.NotoTextView
-                    android:id="@+id/tv_bus_type"
+                <ImageView
+                    android:id="@+id/iv_nop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
                     android:layout_marginTop="40dp"
-                    android:text="차량종류"
                     android:textColor="@color/TextBlack"
                     android:textSize="14sp"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_how_far"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_vias"
-                    app:notoTextStyle="medium" />
-
-                <ImageView
-                    android:id="@+id/tv_nop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:textColor="@color/TextBlack"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toStartOf="@id/tv_how_far"
-                    app:layout_constraintStart_toEndOf="@id/tv_bus_type"
-                    app:layout_constraintTop_toBottomOf="@id/rv_vias"
                     app:srcCompat="@drawable/ic_portrait" />
-
-                <com.thustop.thestop.widgets.NotoTextView
-                    android:id="@+id/tv_how_far"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginEnd="32dp"
-                    android:text="운행거리"
-                    android:textColor="@color/TextBlack"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rv_vias"
-                    app:notoTextStyle="medium" />
-
-                <com.thustop.thestop.widgets.NotoTextView
-                    android:id="@+id/tv_capacity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="25인승"
-                    android:textColor="@color/TextBlack"
-                    android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="@id/tv_bus_type"
-                    app:layout_constraintStart_toStartOf="@id/tv_bus_type"
-                    app:layout_constraintTop_toBottomOf="@id/tv_bus_type"
-                    app:notoTextStyle="regular" />
 
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_passengers"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="4dp"
                     android:text="16/25"
                     android:textColor="@color/TextBlack"
                     android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="@id/tv_nop"
-                    app:layout_constraintStart_toStartOf="@id/tv_nop"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nop"
+                    app:layout_constraintEnd_toEndOf="@id/iv_nop"
+                    app:layout_constraintStart_toStartOf="@id/iv_nop"
+                    app:layout_constraintTop_toBottomOf="@id/iv_nop"
                     app:notoTextStyle="regular" />
+
+                <ImageView
+                    android:id="@+id/tv_how_far"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="32dp"
+                    android:src="@drawable/ic_route_arrow"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/iv_nop"
+                    app:layout_constraintTop_toBottomOf="@id/rv_vias" />
 
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="4dp"
                     android:text="25.12km"
                     android:textColor="@color/TextBlack"
                     android:textSize="13sp"
@@ -224,7 +198,7 @@
                     android:textColor="@color/TextBlack"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_capacity"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_passengers"
                     app:notoTextStyle="medium" />
 
                 <com.thustop.thestop.widgets.NotoTextView
