--- a/app/src/main/res/layout/dialog_ticket_detail_map.xml
+++ b/app/src/main/res/layout/dialog_ticket_detail_map.xml
@@ -54,6 +54,7 @@
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
         android:orientation="vertical">
 
         <View
